<resources>
    <string name="app_name">Potecolle</string>
    <string name="message_inscription">Inscription</string>
    <string name="inscription">S\'inscrire</string>
    <string name="se_connecter">Se connecter</string>
    <string name="connexion">Connexion</string>
    <string name="revanche">Revanche</string>
    <string name="rejouer">Rejouer</string>
    <string name="nom_joueur">Nom</string>
    <string name="niveau">Niveau</string>
    <string name="points">Points</string>
    <string name="ok">Ok</string>
    <string name="email">Email</string>
    <string name="creer_compte">Créer le compte</string>

    <string name="not_created">Ton compte n\'a pas été créé</string>
    <string name="no_account">Ton école n\'a pas l\'air de t\'avoir créé un compte. Demande lui de t\'en créer un pour que tu puisses jouer ;)</string>
    <string name="problem">Un problème est survenu, merci d\'envoyer un message à chloe.potecolle@gmail.com avec dans le corps du message "merci de supprimer le compte lié à l\'adresse mail " et de mettre l\'adresse mail que vous avez utilisé pour créer votre compte</string>


    <string name="question">Question</string>
    <string name="reponse">Ta Réponse</string>
    <string name="sa_reponse">Sa Réponse</string>
    <string name="solution">Solution</string>
    <string name="mdp_oublie">Mot de passe oublié ?</string>
    <string name="envoyer_mail">Réinitialiser le mot de passe</string>
    <string name="message_explicatif_reinitialiser_mdp">Renseignez votre mail, si vous avez un compte Potecolle, nous vous enverrons un mail pour réinitialiser votre mot de passe :)</string>


    <string name="username">Mail</string>
    <string name="mdp">Mot de passe</string>
    <string name="start_game">Nouvelle partie</string>
    <string name="start_duel">Lancer un duel !</string>
    <string name="start_solo">S\'entrainer</string>
    <string name="ajout_ami">Ajouter un pote</string>
    <string name="maths">Maths</string>
    <string name="français">Français</string>
    <string name="next">Suivant</string>
    <string name="welcome_text">Défie, Joue, Révise !</string>
    <string name="se_deconnecter">Se deconnecter</string>
    <string name="configurer_compte">Mon compte</string>
    <string name="rester_connecter">Rester connecté</string>
    <string name="explication_ecriture">Voici ta page de brouillon ;)</string>
    <string name="retour_quiz">Retour au quiz</string>
    <string name="brouillon">brouillon</string>
    <string name="retourMain">Retour</string>
    <string name="TimerQuestions">Souhaites-tu qu\'il y ait un temps limite pour répondre aux questions ?</string>
    <string name="bienvenue">Bienvenue chez Potecolle ! Donne nous le nom sous lequel tu veux apparaître auprès de tes potes ! ;)</string>
    <string name="add_friends">Ajoute des potes pour jouer à plusieurs !</string>
    <string name="entrainer_seul">S\'entrainer seul</string>
    <string name="demande_envoye">Invitation envoyée !</string>
    <string name="demande_accepte">Vous avez un nouvel pote !</string>
    <string name="demande_non_accepte">Nous avons bien pris en compte votre refus</string>
    <string name="demande_deleted">Nous avons bien pris en compte votre suppression</string>
    <string name="no_notification">Vous n\'avez pas de notification !</string>
    <string name="supprimer_compte">Supprimer le compte</string>
    <string name="supprimer_compte_question">Es-tu sûr de vouloir supprimer ton compte ? Toutes tes données seront effacées.</string>
    <string name="supprimer">Supprimer</string>
    <string name="annuler">Annuler</string>
    <string name="voir_ami">Potes</string>
    <string name="update">Update</string>
    <string name="username_already_used">Ce nom est déjà utilisé</string>
    <string name="bravo">Bravo !</string>
    <string name="got_it">Retour</string>
    <string name="leaderBoard">Leaderboard</string>
    <string name="voir_mes_parties">Mes parties</string>
    <string name="stop_partie_seul">Nous avons annulé ta partie car tu es partie :( </string>
    <string name="stop_partie">Nous avons arrêté ta partie car tu es partie... Recommence la dans tes parties !  </string>


    <string-array name="classes_VC">
        <item>Villebon-Charpak</item>
    </string-array>

    <string-array name="classes_startupforkids">
        <item>StartupForKids</item>
    </string-array>


    <string-array name="classes_reverie">
        <item>La reverie</item>
    </string-array>

    <string-array name="all_classes_for_debug">
        <item>Villebon-Charpak</item>
        <item>La reverie</item>
    </string-array>



    <string-array name="no_class">
        <item>Tu n\'as pas de classe disponible</item>
    </string-array>


</resources>
